--- a/net.helppain.mobile/code/var/help/web_roots/help/.htaccess
+++ b/net.helppain.mobile/code/var/help/web_roots/help/.htaccess
@@ -1,3 +1,7 @@
 RewriteEngine on
 RewriteCond $1 !^(index\.php|favicon\.ico|assets|robots\.txt|healthcheck\.php)
-RewriteRule ^(.*)$ /index.php/$1 [L]
+
+RewriteCond %{HTTP_HOST} !^help\.helppain\.net$ [NC]
+RewriteRule ^(.*)$ http://help.helppain.net/index.php/$1 [R=301,L]
+
+#RewriteRule ^(.*)$ /index.php/$1 [L]
